# mtk-cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GUIDELINES.md  INSTALL.md  LICENSE  README.md
cmake/: version.hpp.in
filters/: cargo.toml  docker.toml  make.toml  npm.toml  pytest.toml
scripts/: ci-check.sh
src/: main.cpp
src/cmds/: exec.cpp  exec.hpp  git.cpp  git.hpp  git_diff.cpp  git_log.cpp  git_show.cpp  git_status.cpp  grep.cpp  grep.hpp  hook.cpp  hook.hpp  init.cpp  init.hpp  ls.cpp  ls.hpp  meta.cpp  meta.hpp
src/core/: audit.cpp  audit.hpp  color.cpp  color.hpp  config.cpp  config.hpp  constants.hpp  default_registry.cpp  default_registry.hpp  diagnostic.cpp  diagnostic.hpp  exe_path.cpp  exe_path.hpp  exec.cpp  exec.hpp  exit_codes.cpp  exit_codes.hpp  filter.hpp  filter_cache.cpp  filter_cache.hpp  limits.hpp  passthrough_filter.cpp  passthrough_filter.hpp  registry.cpp  registry.hpp  run_context.cpp  run_context.hpp  signals.cpp  signals.hpp  stats.cpp  stats.hpp  tee.cpp  tee.hpp  toml_filter.cpp  toml_filter.hpp  toml_filter_adapter.cpp  toml_filter_adapter.hpp  trust.cpp  trust.hpp  utils.cpp  (+1 more)
src/core/platform/: file_lock.cpp  file_lock.hpp  paths.cpp  paths.hpp  process_id.hpp  tty.cpp  tty.hpp
tests/: CMakeLists.txt  test_cargo_filter.cpp  test_color.cpp  test_docker_filter.cpp  test_git_diff.cpp  test_git_log.cpp  test_git_show.cpp  test_git_status.cpp  test_grep.cpp  test_hook.cpp  test_init.cpp  test_ls.cpp  test_meta.cpp  test_npm_filter.cpp  test_pytest_filter.cpp  test_stats.cpp  test_toml_filter.cpp  test_utils.cpp  test_win_launcher.cpp
tests/fixtures/: git_diff_raw.txt  git_log_raw.txt  git_status_plain_detached.txt  git_status_plain_rebase.txt  git_status_porcelain.txt  grep_rg_raw.txt  ls_la_raw.txt
tests/support/: fixture.hpp
